// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stock quotes websocket stock quotes endpoint should fallback 1`] = `
{
  "data": {
    "ask_price": 10,
    "ask_volume": 11,
    "bid_price": 12,
    "bid_volume": 13,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 14,
  },
}
`;

exports[`stock quotes websocket stock quotes endpoint should return success 1`] = `
{
  "data": {
    "ask_price": 5,
    "ask_volume": 6,
    "bid_price": 7,
    "bid_volume": 8,
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1018,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 9,
  },
}
`;
